# sodapop

./: README.md
.github/workflows/: do-deploy.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  bun.lockb  drizzle.config.ts  package.json
backend/src/: app.ts  interfaces.ts  schema.ts
backend/src/lib/: dataProcessor.ts  issue.ts  mqtt.ts
backend/src/utils/: constants.ts
frontend/: CMakeLists.txt  Main.qml  datamanager.cpp  datamanager.h  logsmodel.cpp  logsmodel.h  main.cpp  sensordatagenerator.cpp  sensordatagenerator.h
frontend/Components/: DashboardControlCard.qml  DashboardDataCard.qml  DownArrow.qml  MachineCard.qml  NavButton.qml  SensorValue.qml  SideArrow.qml  SideLeftArrow.qml
frontend/Pages/: DashboardPage.qml  LogsPage.qml
rtu/: sketch.ino
